Remove use of deprecated Class.newInstance()